--- a/technews.html
+++ b/technews.html
@@ -23,7 +23,7 @@
         </div>
         <div id="menug">
             <ul id="ul" class="notvisi">
-                <a href="news.html" onclick="setama()">
+                <a href="index.html" onclick="setama()">
                     <li>Home</li>
                 </a>
                 <a href="sports.html">
