--- a/technews.html
+++ b/technews.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tech- All Tech News and Updates</title>
-    <meta name="description" content="News and updates. Here you get all news and updates about entertainment, science, tech, sports. these are short news you can read more if intarested in any news.">
+    <meta name="description" content="News and updates. Here you get all news and updates about entertainment, science, tech, sports.  Read and stay updated.">
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="icons/icon.webp" type="image/x-icon">
 </head>
