--- a/sports.html
+++ b/sports.html
@@ -9,6 +9,9 @@
     <meta name="description" content="News and updates. Here you get all news and updates about entertainment, science, tech, sports.  Read and stay updated.">
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="icons/icon.webp" type="image/x-icon">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7849940869728739"
+     crossorigin="anonymous"></script>
+
 </head>
 
 <body>
